feat: SnackBar 컴포넌트 구현 - snackbar portal 생성 - useSnackBar hook 추가 - GlobalStyles 일부 수정 - Layout 컴포넌트에 SnackBar 추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="root"></div>
     <div id="modal"></div>
+    <div id="snackbar"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
