refactor: meta 태그 설정, primary color 수정, 우측 상단 로그인 버튼 최소 너비 설정

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Todo app" />
+    <meta name="keywords" content="Todo app" />
+    <meta name="author" content="kangju2000" />
+    <meta name="theme-color" content="#000000" />
     <title>Todo app</title>
   </head>
   <body>
